testsuite/gsksl/errors/too-few-initializers-in-array.glsl
void
main ()
{
  vec4 v = { 1, 2, 3, };
}
